no plot, only save

--- a/notebooks/InterpolateTraceOfInverse.ipynb
+++ b/notebooks/InterpolateTraceOfInverse.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Interpolate Trace of Inverse\n",
     "\n",
-    " This interactive tutorial demonstrates the usage of [`TraceInv.InterpolateTraceOfInverse`](https://ameli.github.io/TraceInv/InterpolateTraceOfInverse.html) module and comparison of the methods therein.\n",
+    " This interactive tutorial demonstrates the usage of [`TraceInv.InterpolateTraceOfInverse`](https://ameli.github.io/TraceInv/InterpolateTraceOfInverse.html) module and comparison of the methods therein. The goal is to compute and/or interpolate the function\n",
+    " \n",
+    "$$t \\mapsto $$\n",
     "    \n"
    ]
   },
@@ -16,12 +18,12 @@
    "source": [
     "## Generate Sample Matrices\n",
     "\n",
-    "We demonstrate the examples that follows on symmetric and positive-definite matrices. We generate two sample matrices of the size $(20^2,20^2)$ using [`TraceInv.GenerateMatrix`](https://ameli.github.io/TraceInv/GenerateMatrix.html) as shown below."
+    "We demonstrate the examples that follows on symmetric and positive-definite matrices. We generate two sample correlation matrices of the size $(20^2,20^2)$ using [`TraceInv.GenerateMatrix`](https://ameli.github.io/TraceInv/GenerateMatrix.html) as shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -49,15 +51,15 @@
     "from TraceInv import GenerateMatrix\n",
     "\n",
     "# Generate symmetric and positive-definite matrices\n",
-    "A = GenerateMatrix(NumPoints=20,DecorrelationScale=0.20,Plot=True)\n",
-    "B = GenerateMatrix(NumPoints=20,DecorrelationScale=0.05,Plot=True)"
+    "A = GenerateMatrix(NumPoints=20,DecorrelationScale=0.20,Plot=True)    # See the first plot below\n",
+    "B = GenerateMatrix(NumPoints=20,DecorrelationScale=0.05,Plot=True)    # See the second plot below"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above, the argument ``DecorrelationScale`` sets the correlation of the elements of the matrix. A matrix with smaller decorrelation scale tends to be closet to the identity matrix (such as the matrix ``B`` in the above)."
+    "To make matrices $\\mathbf{A}$ and $\\mathbf{B}$ to be distrinct, we used to different values for the argument ``DecorrelationScale``, which sets the correlation of the elements of the matrix. A matrix with smaller decorrelation scale tends to be closer to the identity matrix (such as the matrix $\\mathbf{B}$ in the above)."
    ]
   },
   {
@@ -65,7 +67,8 @@
    "metadata": {},
    "source": [
     "## Compute Trace without Interpolation\n",
-    "\n"
+    "\n",
+    "The module [`TraceInv.ComputeTraceOfInverse`]() computes "
    ]
   },
   {
