no check display

--- a/notebooks/InterpolateTraceOfInverse.ipynb
+++ b/notebooks/InterpolateTraceOfInverse.ipynb
@@ -6,10 +6,11 @@
    "source": [
     "# Interpolate Trace of Inverse\n",
     "\n",
-    " This interactive tutorial demonstrates the usage of [`TraceInv.InterpolateTraceOfInverse`](https://ameli.github.io/TraceInv/InterpolateTraceOfInverse.html) module and comparison of the methods therein. The goal is to compute and/or interpolate the function\n",
+    " This interactive tutorial demonstrates the usage of [`TraceInv.InterpolateTraceOfInverse`](https://ameli.github.io/TraceInv/InterpolateTraceOfInverse.html) module and comparison of the methods therein. For two invertible matrices $\\mathbf{A}$ and $\\mathbf{B}$, the goal is to compute and/or interpolate the function\n",
     " \n",
-    "$$t \\mapsto $$\n",
-    "    \n"
+    "$$t \\mapsto \\mathrm{trace} (\\mathbf{A} +  t \\mathbf{B})^{-1},$$\n",
+    "    \n",
+    "for a fixed parameter $t$ or in an interval $t \\in [a,b]$. "
    ]
   },
   {
@@ -68,7 +69,7 @@
    "source": [
     "## Compute Trace without Interpolation\n",
     "\n",
-    "The module [`TraceInv.ComputeTraceOfInverse`]() computes "
+    "The module [`TraceInv.ComputeTraceOfInverse`](https://ameli.github.io/TraceInv/ComputeTraceOfInverse.html) computes the trace of inverse of a matrix, here $\\mathbf{A} + t \\mathbf{B}$."
    ]
   },
   {
@@ -76,7 +77,14 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy\n",
+    "from TraceInv import ComputeTraceOfInverse\n",
+    "\n",
+    "# Specify inquiry points t\n",
+    "t = numpy.logspace(-3,3,100)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
