updated bench, modify cholesky info dictionary

--- a/benchmark/notebooks/plot_benchmark_openblas_dense.ipynb
+++ b/benchmark/notebooks/plot_benchmark_openblas_dense.ipynb
@@ -275,7 +275,7 @@
     "                    M_traceinv = (1.0 / (alpha**2 - beta**2)) * ( sizes - ((q**2) / (1.0 - q**2)))\n",
     "            \n",
     "    else:\n",
-    "        M_trace_nv = sizes / alpha\n",
+    "        M_traceinv = sizes / alpha\n",
     "        \n",
     "    return M_traceinv"
    ]
