--- a/benchmark/notebooks/plot_benchmark_speed.ipynb
+++ b/benchmark/notebooks/plot_benchmark_speed.ipynb
@@ -15,14 +15,14 @@
     "* **CPU**\n",
     "* **GPU**\n",
     "\n",
-    "Matrix $\\mathbf{A}$ are symmetric positive-definite matrices from real applications obtained from [sparsesuite matrix collection](https://sparse.tamu.edu/).\n",
-    "\n",
     "This notebook will plot\n",
     "\n",
     "* Process time of each method.\n",
     "* Accuracy of computing traceinv wth respect to 128-bit data type.\n",
     "\n",
     "### Matrices\n",
+    "\n",
+    "Matrix $\\mathbf{A}$ are symmetric positive-definite matrices from real applications obtained from [sparsesuite matrix collection](https://sparse.tamu.edu/).\n",
     "\n",
     "* ['nos5'](https://sparse.tamu.edu/HB/nos5)\n",
     "* ['mhd4800b'](https://sparse.tamu.edu/Bai/mhd4800b)\n",
@@ -70,7 +70,7 @@
     "To run this script on a cluster with SLURM:\n",
     "\n",
     "    cd jobfiles\n",
-    "    sbatch jobfile_cpu.sh\n",
+    "    sbatch jobfile_benchmark_speed_cpu.sh\n",
     "   \n",
     "When submitting the jobs, make sure that the cpu is the same as the previous runs. For isnatnce, nodes on savio2 cluster between `n027` and `n150` are *Intel Xeon E5-2670 v3*.\n",
     "\n",
@@ -93,7 +93,7 @@
     "To run this script on a cluster with SLURM:\n",
     "\n",
     "    cd jobfiles\n",
-    "    sbatch jobfile_gpu.sh\n",
+    "    sbatch jobfile_benchmark_speed_gpu.sh\n",
     "   \n",
     "When submitting the jobs, make sure that the cpu is the same as the previous runs. For isnatnce, nodes on savio2 cluster between `n027` and `n150` are *Intel Xeon E5-2670 v3*.\n",
     "\n",
