--- a/benchmark/notebooks/plot_compare_methods_analytic_matrix_traceinv.ipynb
+++ b/benchmark/notebooks/plot_compare_methods_analytic_matrix_traceinv.ipynb
@@ -5,7 +5,7 @@
    "id": "edad7471",
    "metadata": {},
    "source": [
-    "# Comparison of Computing `traceinv` with Various Methods\n",
+    "# Comparison of Computing `traceinv` with Various Methods (Analytic Matrix)\n",
     "\n",
     "\n",
     "### Objective\n",
@@ -72,21 +72,21 @@
     "\n",
     "#### 1. Run locally\n",
     "\n",
-    "Run `/benchmark/scripts/compare_methods.py` by\n",
+    "Run `/benchmark/scripts/compare_methods_analytic_matrix.py` by\n",
     "\n",
     "    cd /benchmark/scripts\n",
-    "    python ./compare_methods.py -a -f traceinv\n",
+    "    python ./compare_methods_analytic_matrix.py -a -f traceinv\n",
     "    \n",
     "where `-a` will generate all 32-bit, 64-bit, and 128-bit results. Also, `-f` determines which function to compute. The script can compute both traceinv and logdet.\n",
     "        \n",
-    "The output is stored in `/benchnmark/pickle_results/compare_methods_traceinv.pickle`.\n",
+    "The output is stored in `/benchnmark/pickle_results/compare_methods_analytic_matrix_traceinv.pickle`.\n",
     "\n",
     "#### 2. Run on cluster\n",
     "\n",
     "To run this script on a cluster with SLURM:\n",
     "\n",
     "    cd jobfiles\n",
-    "    sbatch jobfile_compare_methods_traceinv.sh\n",
+    "    sbatch jobfile_compare_methods_analytic_matrix_traceinv.sh\n",
     "   \n",
     "When submitting the jobs, make sure that the cpu is the same as the previous runs. For isnatnce, nodes on savio2 cluster between `n027` and `n150` are *Intel Xeon E5-2670 v3*."
    ]
@@ -176,7 +176,7 @@
    ],
    "source": [
     "benchmark_dir = '..'\n",
-    "results_filename = join(benchmark_dir, 'pickle_results', 'compare_methods_traceinv.pickle')\n",
+    "results_filename = join(benchmark_dir, 'pickle_results', 'compare_methods_analytic_matrix_traceinv.pickle')\n",
     "\n",
     "\n",
     "with open(results_filename, 'rb') as file:\n",
@@ -263,7 +263,7 @@
     "                    M_traceinv = (1.0 / (alpha**2 - beta**2)) * ( sizes - ((q**2) / (1.0 - q**2)))\n",
     "            \n",
     "    else:\n",
-    "        M_trace_nv = sizes / alpha\n",
+    "        M_traceinv = sizes / alpha\n",
     "        \n",
     "    return M_traceinv"
    ]
