fix gk transpose

--- a/benchmark/notebooks/plot_compare_methods_analytic_matrix_traceinv.ipynb
+++ b/benchmark/notebooks/plot_compare_methods_analytic_matrix_traceinv.ipynb
@@ -93,11 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "9b3da6b6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import imate\n",
     "import numpy\n",
     "import numpy.polynomial.polynomial as poly\n",
     "import pickle\n",
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "e2a973f6",
    "metadata": {},
    "outputs": [
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "1f652ac9",
    "metadata": {},
    "outputs": [],
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "1913a54b",
    "metadata": {},
    "outputs": [
@@ -362,7 +363,6 @@
     "        if not numpy.isnan(trace_c[k, i]):\n",
     "            alg_wall_time_c[k, i] = data_results[i]['info_c']['time']['tot_wall_time']\n",
     "\n",
-    "\n",
     "    #ax.plot(sizes, alg_wall_time_s, '--o', color=lighten_color(color_s, lighten[k]), label='SLQ')\n",
     "    #ax.plot(sizes, alg_wall_time_h, '--s', color=lighten_color(color_h, lighten[k]), label='Hutchinson')\n",
     "    #ax.plot(sizes, alg_wall_time_c, '--d', color=lighten_color(color_c, lighten[k]), label='Cholesky')\n",
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "dbd8d49e",
    "metadata": {
     "scrolled": false
