--- a/benchmark/notebooks/plot_vary_lanczos_degree_analytic_matrix.ipynb
+++ b/benchmark/notebooks/plot_vary_lanczos_degree_analytic_matrix.ipynb
@@ -87,12 +87,12 @@
     "To run on a cluster with TORQUE:\n",
     "\n",
     "    cd jobfiles\n",
-    "    \n",
-    "    # will produce vary_lanczos_degree_analytic_matrix_ortho.pickle\n",
-    "    qsub jobfile_vary_lanczos_degree_analytic_matrix_ortho.pbs\n",
-    "    \n",
-    "    # will produce vary_lanczos_degree_analytic_matrix_not_ortho.pickle\n",
-    "    qsub jobfile_vary_lanczos_degree_analytic_matrix_not_ortho.pbs  \n",
+    "    qsub jobfile_vary_lanczos_degree_analytic_matrix.pbs\n",
+    "\n",
+    "The above jobfile runs an array of 2 jobs on 2 nodes, with and without ortho option, and produces:\n",
+    "\n",
+    "* `vary_lanczos_degree_analytic_matrix_ortho.pickle`\n",
+    "* `vary_lanczos_degree_analytic_matrix_not_ortho.pickle`\n",
     "\n",
     "### Notes\n",
     "\n",
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "5c198a26",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "cd456238",
    "metadata": {},
    "outputs": [
