--- a/benchmark/notebooks/plot_vary_lanczos_degree_practical_matrix.ipynb
+++ b/benchmark/notebooks/plot_vary_lanczos_degree_practical_matrix.ipynb
@@ -73,13 +73,13 @@
     "\n",
     "To run on a cluster with TORQUE:\n",
     "\n",
-    "    cd jobfiles\n",
-    "    \n",
-    "    # will produce vary_lanczos_degree_practical_matrix_ortho.pickle\n",
-    "    qsub jobfile_vary_lanczos_degree_practical_matrix_ortho.pbs\n",
-    "    \n",
-    "    # will produce vary_lanczos_degree_practical_matrix_not_ortho.pickle\n",
-    "    qsub jobfile_vary_lanczos_degree_practical_matrix_not_ortho.pbs  \n",
+    "    cd jobfiles  \n",
+    "    qsub jobfile_vary_lanczos_degree_practical_matrix.pbs\n",
+    "\n",
+    "The above jobfile runs an array of 2 jobs on 2 nodes, with and without ortho option, and produces:\n",
+    "\n",
+    "* `vary_lanczos_degree_practical_matrix_ortho.pickle`\n",
+    "* `vary_lanczos_degree_practical_matrix_not_ortho.pickle`\n",
     "\n",
     "### Notes\n",
     "\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "5c198a26",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cd456238",
    "metadata": {},
    "outputs": [
