--- a/benchmark/notebooks/plot_benchmark_speed.ipynb
+++ b/benchmark/notebooks/plot_benchmark_speed.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "0ae3e278",
    "metadata": {},
    "outputs": [],
@@ -326,12 +326,36 @@
     "    log2_x = numpy.log2(x)\n",
     "    log2_y = numpy.log2(y)\n",
     "    \n",
-    "    return numpy.polyfit(log2_x, log2_y, 1)[0]"
+    "    return numpy.polyfit(log2_x, log2_y, 1)[0]\n",
+    "\n",
+    "def find_asymptote_slope(x, y):\n",
+    "    \"\"\"\n",
+    "    finds asymptotic slope in y = x**a. The is the slope\n",
+    "    at the end of x (ie, x[-1]) considering a second order\n",
+    "    regression.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    log2_x = numpy.log2(x)\n",
+    "    log2_y = numpy.log2(y)\n",
+    "    \n",
+    "    max_degree = 2\n",
+    "    degree = x.size - 1\n",
+    "    if degree > max_degree:\n",
+    "        degree = max_degree\n",
+    "    \n",
+    "    p = numpy.polyfit(log2_x, log2_y, degree)\n",
+    "    dp = numpy.polyder(p)\n",
+    "    \n",
+    "    # Find slope at the end point\n",
+    "    end_point = numpy.sort(log2_x)\n",
+    "    asym_slope = numpy.polyval(dp, end_point[-1])\n",
+    "    \n",
+    "    return asym_slope"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "id": "a8f5351b",
    "metadata": {},
    "outputs": [
@@ -343,11 +367,11 @@
       "matrix size: 4147110\n",
       "matrix nnz: 316548962\n",
       "matrix density: 0.000018\n",
-      "CPU slope: -0.830493\n",
-      "GPU slope: -0.981623\n",
-      "CPU slope: -0.801877\n",
-      "GPU slope: -0.967695\n",
-      "CPU slope: -0.769195\n",
+      "CPU, data type: 32-bit, slope: -0.830493\n",
+      "GPU, data type: 32-bit,  slope: -0.981623\n",
+      "CPU, data type: 64-bit, slope: -0.801877\n",
+      "GPU, data type: 64-bit,  slope: -0.967695\n",
+      "CPU, data type: 128-bit, slope: -0.769195\n",
       "Plot saved to \"benchmark_speed_cores.png\".\n"
      ]
     },
@@ -412,7 +436,7 @@
     "        cpu_cpu_proc_time[i] = cpu_results[i]['info']['time']['cpu_proc_time']\n",
     "        \n",
     "    slope = find_slope(cpu_num_threads, cpu_alg_wall_time)\n",
-    "    print(\"CPU slope: %f\" % slope)\n",
+    "    print(\"CPU, data type: %s, slope: %f\" % (data_type + '-bit', slope))\n",
     "\n",
     "    multi_thread = False\n",
     "    if not multi_thread:\n",
@@ -439,7 +463,7 @@
     "        \n",
     "        if gpu_num_gpu_devices.size > 1:\n",
     "            slope = find_slope(gpu_num_gpu_devices, gpu_alg_wall_time)\n",
-    "            print(\"GPU slope: %f\" % slope)\n",
+    "            print(\"GPU, data type: %s,  slope: %f\" % (data_type + '-bit', slope))\n",
     "\n",
     "        if plot_log:\n",
     "            ax.plot(gpu_num_gpu_devices, gpu_alg_wall_time, markers[type_index],\n",
@@ -499,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "e76e27c0",
    "metadata": {},
    "outputs": [
@@ -511,6 +535,11 @@
       "['nos5', 'mhd4800b', 'bodyy6', 'G2_circuit', 'parabolic_fem', 'StocF-1465', 'Bump_2911', 'Queen_4147']\n",
       "[     5172     27520    134208    726674   3674625  21005389 127729899\n",
       " 316548962]\n",
+      "CPU, type: 32-bit, slope: 1.085455\n",
+      "CPU, type: 64-bit, slope: 0.896644\n",
+      "CPU, type: 128-bit, slope: 0.931095\n",
+      "GPU, type: 32-bit, slope: 0.865462\n",
+      "GPU, type: 64-bit, slope: 0.929846\n",
       "Plot saved to \"benchmark_speed_time.png\".\n"
      ]
     },
@@ -593,6 +622,7 @@
     "            cpu_alg_wall_time_[i] = cpu_results[i]['info']['time']['alg_wall_time']\n",
     "            cpu_cpu_proc_time_[i] = cpu_results[i]['info']['time']['cpu_proc_time']\n",
     "            \n",
+    "        # Find which index has the max number of CPU threads\n",
     "        cpu_max_num_threads_index = numpy.argmax(cpu_num_threads)\n",
     "        #cpu_max_num_threads_index = numpy.argmin(cpu_num_threads)\n",
     "        cpu_tot_wall_time[data_index, type_index] = cpu_tot_wall_time_[cpu_max_num_threads_index]\n",
@@ -658,14 +688,27 @@
     "for type_index in range(num_types):\n",
     "    \n",
     "    type_ = data_type[0, type_index]\n",
-    "    ax.plot(abscissa, cpu_alg_wall_time[:, type_index],\n",
-    "                markers[type_index], color=intel_color[type_index],\n",
-    "            label='cpu ' + str(type_) + '-bit')\n",
+    "    ax.plot(abscissa, cpu_alg_wall_time[:, type_index], markers[type_index],\n",
+    "            color=intel_color[type_index], label='cpu ' + str(type_) + '-bit')\n",
     "\n",
     "    if type_ != 128:\n",
     "        ax.plot(abscissa, gpu_alg_wall_time[:, type_index], markers[type_index],\n",
-    "                color=nvidia_color[type_index],\n",
-    "                label='gpu ' + str(type_) + '-bit')\n",
+    "                color=nvidia_color[type_index], label='gpu ' + str(type_) + '-bit')\n",
+    "\n",
+    "# Print slope of CPU\n",
+    "for type_index in range(num_types):\n",
+    "    start_index = 5\n",
+    "    type_ = data_type[0, type_index]\n",
+    "    slope = find_asymptote_slope(abscissa[start_index:], cpu_alg_wall_time[:, type_index][start_index:])\n",
+    "    print(\"CPU, type: %s, slope: %f\" % (str(type_) + '-bit', slope))\n",
+    "\n",
+    "# Print slope of GPU\n",
+    "for type_index in range(num_types):\n",
+    "    type_ = data_type[0, type_index]\n",
+    "    if type_ != 128:\n",
+    "        start_index = 5\n",
+    "        slope = find_asymptote_slope(abscissa[start_index:], gpu_alg_wall_time[:, type_index][start_index:])\n",
+    "        print(\"GPU, type: %s, slope: %f\" % (str(type_) + '-bit', slope))\n",
     "        \n",
     "# create blank rectangle\n",
     "extra = Rectangle((0, 0), 1, 1, fc=\"w\", fill=False, edgecolor='none', linewidth=0)\n",
@@ -712,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "id": "5fa88374",
    "metadata": {},
    "outputs": [
