--- a/benchmark/notebooks/plot_vary_lanczos_degree_analytic_matrix.ipynb
+++ b/benchmark/notebooks/plot_vary_lanczos_degree_analytic_matrix.ipynb
@@ -595,8 +595,8 @@
     "relative_error_ortho = numpy.zeros((num_data_ortho, ), dtype=float)\n",
     "relative_error_not_ortho = numpy.zeros((num_data_not_ortho, ), dtype=float)\n",
     "\n",
-    "relative_error_ortho = 100.0 * numpy.abs(ortho_trace - trace_ortho) / trace_ortho\n",
-    "relative_error_not_ortho = 100.0 * numpy.abs(not_ortho_trace - trace_not_ortho) / trace_not_ortho\n",
+    "relative_error_ortho = 100.0 * numpy.abs(ortho_trace - trace_ortho) / numpy.abs(trace_ortho)\n",
+    "relative_error_not_ortho = 100.0 * numpy.abs(not_ortho_trace - trace_not_ortho) / numpy.abs(trace_not_ortho)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6, 5))\n",
     "    \n",
@@ -668,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
